--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
 	</div>
 
 <!-- Scripts -->
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+<script src='scripts/jquery-1.11.1.min.js'></script>
 <script src='scripts/colpick.js' type='text/javascript'></script>
 <script src='index.js' type='text/javascript'></script>
 </body>
