--- a/app/testCode.html
+++ b/app/testCode.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset=utf-8>
-	<title>Text Display</title>
+	<title>TEST Image Display</title>
 
 <!-- Stylesheets -->
 <link rel='stylesheet' type='text/css' href='styles/index.css'/>
@@ -25,7 +25,7 @@
 			<br><br><br>
 			<!-- Radio controls for picking which arrow to show -->
 			<input class='btn' id='resetBtn' type='button' value='Reset'></input><br><br>
-			<span class="subheader">|Display|</span><br><br>
+			<span class="subheader">|Select Image|</span><br><br>
 			<input class='radioImgBtn' id='1' name='imgBtn' type='radio' placeholder=''></input>
 			<label class='radioLBL' id='' name='' for="1">Left</label>
 			<input class='radioImgBtn' id='2' name='imgBtn' type='radio' placeholder=''></input>
@@ -36,18 +36,26 @@
 			<label class='radioLBL' id='' name='' for="4">Neither</label>
 			<br> <br>
 			<!-- button controls for slide functions -->
-			<span class="subheader">|Slide|</span><br>
-			<input class='btn' id='leftSlide' type='button' value='Left'>
-			<input class='btn' id='rightSlide' type='button' value='Right'>
-			<input class='btn' id='bothSlide' type='button' value='Both'>
-			<input class='btn' id='neitherSlide' type='button' value='Neither'>
-			<!-- need for slideIn effect -->
-			<input id="slideEvent" type="button" style="display:none;">
+			<span class="subheader">|Fade|</span><br><br>
+			<input class='btn' id='fadeBtn' type='button' value='Fade'>
+			<input class='btn' id='fadeInBtn' type='button' value='Fade In Only'>
+			<input class='btn' id='fadeOutBtn' type='button' value='Fade Out Only'>
+			<br><br>
+			<span class="subheader">|Slide|</span><br><br>
+			<input class='btn' id='slideBtn' type='button' value='Slide'>
+			<input class='btn' id='slideInBtn' type='button' value='Slide In Only'>
+			<input class='btn' id='slideOutBtn' type='button' value='Slide Out Only'>
+
+			<!-- <input class='btn' id='rightSlide' type='button' value='Right'>
+			<input class='btn' id='bothSlide' type='button' value='Both'> -->
+			<!-- Need for slide in effect -->
+			<input id="slideInEvent" type="button" style="display:none;">
+			<input id="slideOutEvent" type="button" style="display:none;">
 		</form>
 	</div>
 
 <!-- Scripts -->
 <script src='scripts/jquery-1.11.1.min.js'></script>
-<script src='image_form.js' type='text/javascript'></script>
+<script src='testCode.js' type='text/javascript'></script>
 </body>
 </html>
