--- a/app/form_image.html
+++ b/app/form_image.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset=utf-8>
-	<title>TEST Image Display</title>
+	<title>Image Display</title>
 
 <!-- Stylesheets -->
 <link rel='stylesheet' type='text/css' href='styles/index.css'/>
@@ -56,6 +56,6 @@
 
 <!-- Scripts -->
 <script src='scripts/jquery-1.11.1.min.js'></script>
-<script src='testCode.js' type='text/javascript'></script>
+<script src='form_image.js' type='text/javascript'></script>
 </body>
 </html>
