--- a/app/form_index.html
+++ b/app/form_index.html
@@ -6,7 +6,7 @@
 
 	<!-- Stylesheets -->
 <link rel='stylesheet' type='text/css' href='styles/index.css'/>
-<link rel='stylesheet' href='styles/colpick.css' type='text/css'/>
+<link rel='stylesheet' type='text/css' href='styles/colpick.css'/>
 </head>
 
 <body>
@@ -46,6 +46,6 @@
 <!-- Scripts -->
 <script src='scripts/jquery-1.11.1.min.js'></script>
 <script src='scripts/colpick.js' type='text/javascript'></script>
-<script src='index.js' type='text/javascript'></script>
+<script src='form_index.js' type='text/javascript'></script>
 </body>
 </html>
