Finished index.html
still a few bugs with clicking to quickly. Haven’t figured out how to
disable events/function while they are running.

--- a/app/form_index.html
+++ b/app/form_index.html
@@ -11,11 +11,11 @@
 
 <body>
 <!-- Main Display, shows all text that needs to scroll through the screen -->
-	<div class="container" id='mainView'>
-		<span id='mainDsply'>瑞德感知</span>
+	<div class="container" id='textView'>
+		<span id='textDsply'>瑞德感知</span>
 	</div>
 <!-- "Control Panel", used to control the display(it should be hidden from view of regular users) -->
-	<div class="container" id='gokuCtrl'>
+	<div class="" id='gokuCtrl'>
 		<form name='gokuForm' action=''>
 			<span>Control Panel</span>
 			<!-- <select id='scrollType' name='scrollType'>
