--- a/app/form_info.html
+++ b/app/form_info.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 	<!-- Info Page Display -->
-	<div class="container" id="infoPage">
+	<div class="container" id="infoView">
 		<!-- <img id="infoPageMockup" src="img/background.png" alt=""> -->
-		<div class="dsplyTime">11:00</div><br>
+		<div class="dsplyTime" id="clock">&nbsp;</div><br>
 		<div class="percentage">Indoor Temperature</div>
 		<div class="temperature">26&deg;</div>
 		<div class="humidityWrap">
