--- a/app/index.html
+++ b/app/index.html
@@ -5,47 +5,108 @@
 	<title>Text Display</title>
 
 	<!-- Stylesheets -->
-<link rel='stylesheet' type='text/css' href='styles/index.css'/>
-<link rel='stylesheet' type='text/css' href='styles/colpick.css'/>
+<link rel="stylesheet" type="text/css" href="styles/index.css"/>
+<link rel="stylesheet" type="text/css" href="styles/animations.css"/>
 </head>
 
 <body>
 <!-- Main Display, shows all text that needs to scroll through the screen -->
-	<div class="container" id='mainView'>
-		<span id='mainDsply'>瑞德感知</span>
+	<div class="container " id="gokuView">
+		<div class="pt-page current" id="textView">
+			<span id="mainDsply">瑞德感知</span>
+		</div>
+		<div class="pt-page" id='imageView'>
+			<span>Escape Path</span><br>
+				<img class='imageBase' id='imgDsply1' src='img/左.png' alt=''/>
+				<img class='imageBase' id='imgDsply2' src='img/右.png' alt=''/>
+				<img class='imageBase' id='imgDsply3' src='img/雙.png' alt=''/>
+				<img class='imageBase' id='imgDsply4' src='img/叉叉.png' alt=''>
+		</div>
+		<div class="pt-page" id="infoView">
+			<div class="dsplyTime" id="clock">&nbsp;</div><br>
+			<div class="percentage">Indoor Temperature</div>
+			<div class="temperature">26&deg;</div>
+			<div class="humidityWrap">
+				<p class="hMeasure"><span class="humidityTxt">Humidity</span><img class="icon" src="img/溫度計切換圖/5.png" alt=""><span id="humidPercent">25%</span></p><br>
+				<div class="humidityBloc" id="hBloc1"></div><div class="humidityBloc" id="hBloc2"></div><div class="humidityBloc" id="hBloc3"></div><div class="humidityBloc" id="hBloc4"></div><div class="humidityBloc" id="hBloc5"></div>
+			</div>
+		</div>
 	</div>
+
 <!-- "Control Panel", used to control the display(it should be hidden from view of regular users) -->
-	<div class="container" id='gokuCtrl'>
-		<form name='gokuForm' action=''>
-			<span>Control Panel</span>
-			<!-- <select id='scrollType' name='scrollType'>
-				<option value='1'>Fade</option>
-				<option value='2'>Scroll</option>
-				<option value='3'>Marquee</option>
-				<option value='4'>Something</option>
-				<option value='5'>我不知道</option>
-			</select>  -->
-
-			<!-- <div class='color-box' id='background'></div> -->
-
-			<br><br><!-- input controls for text -->
-			<input class='textCol' id='text1' name='text1' type='text' placeholder=''></input>
-			<input class='textCol' id='text2' name='text2' type='text' placeholder=''></input>
-			<input class='textCol' id='text3' name='text3' type='text' placeholder=''></input>
-			<input class='textCol' id='text4' name='text4' type='text' placeholder=''></input>
+	<div class="" id="gokuCtrl">
+		<span>Control Panel</span><br><br>
+		<form name="gokuDivs" action="">
+			<!-- Div controls to cycle the divs -->
+			<span class="subheader">*Div Controls*</span><br>
+			<a class="divNav" id="nav-prev">&lt;</a>
+			<a class="divNav" id="nav-1">1</a>
+			<a class="divNav" id="nav-2">2</a>
+			<a class="divNav" id="nav-3">3</a>
+			<a class="divNav" id="nav-next">&gt;</a>
 			 <br>
-			<input class='btn' id='set' type='button' value='Set'/>
-			<input class='btn' id='test' name='test' type='button' value='TEST'/>
-			<input class='btn' id='prvw' name='prvw' type='button' value='Preview'></input>
-			<input class='btn' id='rst' name='rst' type='button' value='Reset'></input>
+		</form><br>
+		<form name="gokuText" action="">
+			<!-- input controls for text -->
+			<span class="subheader">*Text Controls*</span><br>
+			<input class="textCol" id="text1" name="text1" type="text" placeholder=""></input>
+			<input class="textCol" id="text2" name="text2" type="text" placeholder=""></input>
+			<input class="textCol" id="text3" name="text3" type="text" placeholder=""></input>
+			<input class="textCol" id="text4" name="text4" type="text" placeholder=""></input>
+			 <br>
+			<input class="btn" id="set" type="button" value="Set"/>
+			<input class="btn" id="test" name="test" type="button" value="TEST"/>
+			<input class="btn" id="prvw" name="prvw" type="button" value="Preview"></input>
+			<input class="btn" id="rst" name="rst" type="button" value="Reset"></input>
 			<br> <br>
-			<textarea class='gokuView' name='gokuView' id="gokuView" disabled></textarea>
-		</form>
+			<textarea class="gokuView" name="gokuView" id="gokuView" disabled></textarea>
+		</form><br>
+		<form name='gokuImage' action=''>
+			<span class="subheader">*Image Controls*</span>
+			<br>
+			<!-- Radio controls for picking which arrow to show -->
+			<input class='btn' id='resetBtn' type='button' value='Reset'></input><br><br>
+			<span class="subheader">Select Image</span><br>
+			<input class='radioImgBtn' id='1' name='imgBtn' type='radio' placeholder=''></input>
+			<label class='radioLBL' id='' name='' for="1">Left</label>
+			<input class='radioImgBtn' id='2' name='imgBtn' type='radio' placeholder=''></input>
+			<label class='radioLBL' id='' name='' for="2">Right</label>
+			<input class='radioImgBtn' id='3' name='imgBtn' type='radio' placeholder=''></input>
+			<label class='radioLBL' id='' name='' for="3">Both</label>
+			<input class='radioImgBtn' id='4' name='imgBtn' type='radio' placeholder=''></input>
+			<label class='radioLBL' id='' name='' for="4">Neither</label>
+			<br><br>
+			<!-- button controls for transition functions -->
+			<span class="subheader">Fade</span><br>
+			<input class='btn' id='fadeBtn' type='button' value='Fade'>
+			<input class='btn' id='fadeInBtn' type='button' value='Fade In Only'>
+			<input class='btn' id='fadeOutBtn' type='button' value='Fade Out Only'>
+			<br><br>
+			<span class="subheader">Slide</span><br>
+			<input class='btn' id='slideBtn' type='button' value='Slide'>
+			<input class='btn' id='slideInBtn' type='button' value='Slide In Only'>
+			<input class='btn' id='slideOutBtn' type='button' value='Slide Out Only'>
+		</form><br>
+		<form name='gokuInfo' action=''>
+			<span class="subheader">*Info Controls*</span>
+			<br>
+			<span class="subheader">Temperature Control</span>
+			<br>
+			<input class="sliderCtrl" id="tempCtrl" type="range" min="-40" max="100" step="1" value="26">
+			<label id="tempDsply" for="tempCtrl">26</label>
+			<br><br>
+			<span class="subheader">Humidity Control</span>
+			<br>
+			<input class="sliderCtrl" id="humidityCtrl" type="range" min="0" max="100" step="1" value="25">
+			<label id="humidityDsply" for="humidityCtrl">25</label>
+		</form><br>
 	</div>
 
 <!-- Scripts -->
-<script src='plugins/jquery-1.11.1.min.js'></script>
-<script src='scripts/colpick.js' type='text/javascript'></script>
-<script src='form_index.js' type='text/javascript'></script>
+<script src="plugins/jquery-1.11.1.min.js"></script>
+<script src="form_transition.js" type="text/javascript"></script>
+<script src="form_index.js" type="text/javascript"></script>
+<script src="form_image.js" type="text/javascript"></script>
+<script src="form_info.js" type="text/javascript"></script>
 </body>
 </html>
